[Refactor]: Modify Swagger config and add go.sum
